--- a/src/index.html
+++ b/src/index.html
@@ -22,57 +22,60 @@
   </head>
   <body class="page_body">
     <header class="header page__section">
-      <div class="header__backgroundImg grid--desktop">
-        <div class="top-actions">
-          <a href="#menu" class="icon icon--menu"></a>
-
-          <a href="#" class="logo">
-            <img
-              class="logo_image"
-              src="./images/NAMU.png"
-              alt="NAMU"
-            >
+      <div class="container">
+        <div class="grid">
+          <a href="#menu" class="icon icon--menu grid__item--1-1">
+            <div class="icon--menu-img"></div>
           </a>
-        </div>
 
-        <div class="container">
-          <div class="header__content">
-            <h1 class="header__title grid__item--1-2 grid__item--tablet-1-2">
-              ХУДОЖНІЙ МУЗЕЙ
-            </h1>
-
-            <div class="header__tickets grid__item--1-2">
-              <div class="header__tickets--field">КВИТКИ</div>
-
-              <a
-                class="header__tickets--button"
-                href="#"
-                target="_blank"
+          <div
+            class="
+              logo
+              grid__item--tablet-4-5
+              grid__item--desktop-6-7
+            "
+          >
+            <a href="#" class="logo__link">
+              <img
+                class="logo__image"
+                src="./images/NAMU.png"
+                alt="NAMU"
               >
-                <img
-                  class="header__tickets--button-arrow"
-                  src="./images/arrow.svg"
-                  alt="arrow"
-                >
-              </a>
-            </div>
+            </a>
           </div>
-        </div>
-      </div>
 
-      <div class="container container__mobile">
-        <div class="header__content grid">
-          <h1 class="header__title grid__item--1-2 grid__item--tablet-1-2">
+          <h1
+            class="
+              header__title
+              header__title--mobile
+              grid__item--tablet-1-3
+              grid__item--desktop-1-5
+            "
+          >
             ХУДОЖНІЙ МУЗЕЙ
           </h1>
 
-          <div class="header__tickets grid__item--1-2">
+          <div class="header__actions grid__item--desktop-1-2">
+            <div class="header__actions--line"></div>
+
+            <div class="header__actions--actions">
+              ПОДІЇ
+            </div>
+          </div>
+          <div
+            class="
+              header__tickets
+              header__tickets--mobile
+              grid__item--tablet-1-2
+              grid__item--desktop-3-5
+              grid__item--1-2
+            "
+          >
             <div class="header__tickets--field">КВИТКИ</div>
 
             <a
               class="header__tickets--button"
-              href="#"
-              target="_blank"
+              href="#currentEvents"
             >
               <img
                 class="header__tickets--button-arrow"
@@ -85,64 +88,93 @@
       </div>
     </header>
 
-    <nav class="page__menu menu" id="menu"
-    hidden>
+    <div class="container container__mobile">
+      <div class="header__content grid">
+        <h1 class="header__title grid__item--1-2 grid__item--tablet-1-2">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+
+        <div class="header__tickets grid__item--1-2">
+          <div class="header__tickets--field">КВИТКИ</div>
+
+          <a
+            class="header__tickets--button"
+            href="#"
+            target="_blank"
+          >
+            <img
+              class="header__tickets--button-arrow"
+              src="./images/arrow.svg"
+              alt="arrow"
+            >
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <nav class="page__menu menu" id="menu">
       <div class="container">
-        <div class="menu__content">
-          <div class="menu__top top-actions">
-            <a href="#" class="logo">
+        <div class="grid">
+          <a href="#" class="icon icon--cross grid__item--1-1"></a>
+
+          <div
+            class="
+              logo
+              grid__item--tablet-4-5
+              grid__item--desktop-6-7
+            "
+          >
+            <a href="#" class="logo__link">
               <img
                 class="logo__image"
                 src="./images/NAMU.png"
-                alt="NAMU logo">
+                alt="NAMU"
+              >
             </a>
-
-            <div class="top-actions--rightPart">
-              <a href="#" class="icon icon--cross"></a>
-            </div>
           </div>
-
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="#" class="menu__link">Про нас</a>
-            </li>
-
-            <li class="menu__item">
-              <a href="#currentEvents" class="menu__link">Актуальні події</a>
-            </li>
-
-            <li class="menu__item">
-              <a href="#gallery" class="menu__link">Галерея</a>
-            </li>
-
-            <li class="menu__item">
-              <a href="#subscription" class="menu__link">Підписатися</a>
-            </li>
-
-            <li class="menu__item">
-              <a href="#contacts" class="menu__link">Контакти</a>
-            </li>
-
-          </ul>
-
-          <!-- <a
-            href="tel:+1 234 5555-55-55"
-            class="menu__call menu__call--phone"
-          >
-          +1 234 5555-55-55
-          </a>
-
-          <a
-            href="tel:+1 234 5555-55-55"
-            class="menu__call menu__call--action"
-          >
-          Book a test ride
-          </a> -->
         </div>
+
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link">Про нас</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#currentEvents" class="menu__link">Актуальні події</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#gallery" class="menu__link">Галерея</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#subscription" class="menu__link">Підписатися</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#contacts" class="menu__link">Контакти</a>
+          </li>
+
+        </ul>
+
+        <a
+          href="tel:+38 (044) 278-13-57"
+          class="menu__call menu__call--phone"
+        >
+          +38 (044) 278-13-57
+        </a>
+
+        <a
+          href="https://goo.gl/maps/XASDZvWwfePSJiWX7"
+          class="menu__call menu__call--address"
+          target="_blank"
+        >
+        вул. М. Грушевського, 6; Київ, 01001
+        </a>
       </div>
     </nav>
 
-    <main class="page__main" hidden>
+    <main class="page__main">
       <section
         class="page__section currentEvents"
         id="currentEvents"
@@ -336,7 +368,7 @@
       </section>
     </main>
 
-    <footer class="footer" hidden>
+    <footer class="footer">
       <div class="footer__subscription" id="subscription">
         <h2 class="footer__subscription--title">Підписка</h2>
 
@@ -344,21 +376,25 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
 
-        <div class="footer__subscription--mail">
+        <form
+          class="footer__subscription--mail"
+          action="lyvyni.com.ua"
+          id="about"
+        >
           <input
-            class="footer__subscription--mail-input"
-            type="email"
-            placeholder="E-mail"
-            required>
+          class="footer__subscription--mail-input"
+          type="email"
+          placeholder="E-mail"
+          required>
 
-          <a class="footer__subscription--mail-button" href="#">
+          <button class="footer__subscription--mail-button" href="#">
             <img
               class="footer__subscription--mail-arrow"
               src="./images/arrow.svg"
               alt="arrow"
             >
-          </a>
-        </div>
+          </button>
+        </form>
       </div>
 
       <div class="container">
@@ -380,7 +416,7 @@
             </a>
 
             <div class="footer__logoSocials--socials">
-              <a href="https://www.facebook.com/">
+              <a href="https://www.facebook.com/" target="_blank">
                 <img
                   class="footer__logoSocials--socials-facebook"
                   src="./images/Facebook.png"
@@ -388,7 +424,7 @@
                 >
               </a>
 
-              <a href="https://www.instagram.com/">
+              <a href="https://www.instagram.com/" target="_blank">
                 <img
                   class="footer__logoSocials--socials-instagram"
                   src="./images/instagram.png"
@@ -442,10 +478,11 @@
             </p>
 
             <p>
-              <a class="footer__contacts--contact-address" href="https://goo.gl/maps/XASDZvWwfePSJiWX7">вул. М. Грушевського, 6; Київ, 01001</a><br>
-              тел. +38 (044) 278-13-57 <br>
-              факс +38 (044) 278-74-54 <br>
-              <a class="footer__contacts--contact-email" href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+              <a class="footer__contacts--contact-address" href="https://goo.gl/maps/XASDZvWwfePSJiWX7">вул. М. Грушевського, 6; Київ, 01001</a><br>тел.
+              <a class="footer__contacts--contact-tel" href="tel:+38 (044) 278-13-57">+38(044)278-13-57</a><br>факс
+              <a class="footer__contacts--contact-tel" href="tel:+38 (044) 278-74-54">+38(044)278-74-54</a><br>
+              e-mail:
+              <a class="footer__contacts--contact-email" href="mailto: info@namu.kiev.ua">info@namu.kiev.ua</a>
             </p>
           </div>
 
@@ -479,7 +516,7 @@
             <p>
               <a class="footer__contacts--gallery-gallery" href="#gallery">Галерея</a>
               <br><br>
-              <a class="footer__contacts--gallery-show" href="#show">Виставки та події</a>
+              <a class="footer__contacts--gallery-show" href="#currentEvents">Виставки та події</a>
             </p>
           </div>
 
@@ -491,7 +528,13 @@
             "
           >
             <p>
-              <a class="footer__contacts--about-about" href="#about">Про Нас</a>
+              <a
+                class="footer__contacts--about-about"
+                href="#about"
+                target="_blank"
+              >
+                Про Нас
+              </a>
               <br><br>
               <a class="footer__contacts--about-contacts" href="#contacts">Контакти</a>
             </p>
