--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header">
-
+    <header class="header" >
       <div class="header__title-block">
-        <a href="#" class="header__menu header__menu--tablet">
+        <a href="#menu" class="header__menu header__menu--tablet">
           <img src="images/Vector.png" alt="menu">
         </a>
         <h1 class="header__title">
@@ -22,7 +21,7 @@
           МУЗЕЙ
         </h1>
 
-        <div class="input">
+        <div class="input" >
           <a href="#" class="input__ticket">
             КВИТКИ
           </a>
@@ -31,28 +30,150 @@
           </a>
         </div>
         <p class="header__supplement">
-
+           події
         </p>
       </div>
 
       <div class="header__picture">
-        <a href="#" class="header__menu">
-          <img src="images/Vector.png" alt="menu">
+        <a href="#menu" class="header__menu">
+          <img
+            src="images/Vector.png"
+            alt="menu"
+            class="header__menu-icon"
+          >
         </a>
-        <a href="/" class="logo">
+        <a
+          href="https://goo.gl/maps/Q3KLWrF6TX255TT39"
+          class="logo"
+          target="_blank"
+          >
           <img src="images/NA MU.png" class="logo__img" alt="logo">
         </a>
       </div>
     </header>
 
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+
+          <div class="menu__top-actions">
+            <a href="#" class="menu__cross">
+              <img
+                src="images/cross.svg"
+                alt="cross"
+                class="menu__cross-icon">
+            </a>
+            <a
+              href="https://goo.gl/maps/Q3KLWrF6TX255TT39"
+              class="logo logo--menu"
+              target="_blank"
+              >
+              <img
+                src="images/NA MU.png"
+                class="logo__img logo__img--white"
+                alt="logo">
+            </a>
+
+          </div>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Актуальні події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Підписка</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="menu__call menu__call--phone"
+          >
+              Зателефонуйте нам
+            </a>
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="menu__call menu__call--action"
+          >
+            +38 (044) 278-13-57
+          </a>
+
+        </div>
+      </div>
+    </nav>
+
     <main>
-      <section class="section-galery">
+      <section class="page__section">
         <div class="container">
+          <h2 class="page__section-title">
+            Актуальні події
+          </h2>
+          <div class="galery">
+            <div class="galery__photo">
+              <img
+                src="images/Rectangle 2.1.png"
+                alt="photo"
+                class="galery__photo-img"
+              >
+            </div>
+            <div class="galery__description">
+              <p class="galery__exhibition-date">
+                <span class="galery__text">виставка</span>
+                <span class="galery__date">26.08-29.11.2019</span>
+              </p>
+
+              <h3 class="galery__exhibition-name">
+                Йду і повертаюсь
+              </h3>
+
+              <p class="galery__description-text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="galery">
+            <div class="galery__photo">
+              <img
+                src="images/Rectangle 4.1.png"
+                alt="photo"
+                class="galery__photo-img"
+              >
+            </div>
+            <div class="galery__description">
+              <p class="galery__exhibition-date">
+                <span class="galery__text">виставка</span>
+                <span class="galery__date">26.08-29.11.2019</span>
+              </p>
+
+              <h3 class="galery__exhibition-name galery__exhibition-name--2">
+                І спогади і мрії
+              </h3>
+
+              <p class="galery__description-text">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="page__section">
+        <div class="container">
+          <h2 class="page__section-title">Галерея</h2>
 
         </div>
       </section>
 
     </main>
+
+    <footer></footer>
 
 
 
