--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,134 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <a href="#" class="header__menu">
+        <img src="./images/menu-button.png" alt="menu">
+      </a>
+
+      <h1 class="header__title">
+        na <br> mu
+      </h1>
+
+      <h1 class="header__title header__title-bottom">
+        художній <br> музей
+      </h1>
+
+      <div class="header__form">
+        <div class="header__form-description">
+          квитки
+        </div>
+        <div class="header__form-button button"></div>
+      </div>
+    </header>
+    <main class="content">
+      <section class="events">
+        <h1 class="events__title">Актуальні події</h1>
+        <div class="events__content event">
+          <img
+          src="./images/events-1.png"
+          alt="event-1"
+          class="event__image"
+          >
+          <div class="event__info">
+            <h2 class="event__subtitle">
+              виставка
+              <p class="event__subtitle-date">
+                26.08-29.11.2019
+              </p>
+            </h2>
+            <h2 class="event__title">
+              Йду і повертаюсь
+            </h2>
+            <p class="event__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="events__content event">
+          <img
+            src="./images/events-2.png"
+            alt="event-2"
+            class="event__image"
+          >
+          <div class="event__info">
+            <h2 class="event__subtitle">
+              виставка
+              <p class="event__subtitle-date">
+                26.08-29.11.2019
+              </p>
+            </h2>
+            <h2 class="event__title">
+              І спогади і мрії
+            </h2>
+            <p class="event__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+
+        <div class="events__content lecture">
+          <img
+          src="./images/events-3.png"
+          alt="lecture"
+          class="lecture__image"
+          >
+          <h2 class="event__subtitle lecture__subtitle">
+            лекція
+            <p class="event__subtitle-date lecture__subtitle-date">
+              26/08/2019 - 11:00
+            </p>
+            <div class="lecture__title">
+              Від класицизму до романтизму
+            </div>
+          </h2>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <h1 class="gallery__title">
+          Галерея
+        </h1>
+        <div class="gallery__content">
+          <img
+            src="./images/gallery-1.png"
+            alt="gallery-1"
+            class="gallery__image"
+          >
+          <img
+            src="./images/gallery-2.png"
+            alt="gallery-2"
+            class="gallery__image"
+          >
+          <img
+            src="./images/gallery-3.png"
+            alt="gallery-3"
+            class="gallery__image"
+          >
+          <img
+            src="./images/gallery-4.png"
+            alt="gallery-4"
+            class="gallery__image"
+          >
+          <img
+            src="./images/gallery-5.png"
+            alt="gallery-5"
+            class="gallery__image"
+          >
+        </div>
+        <div class="gallery__selector">
+          <img src="./images/ellipse-active.png" alt="">
+          <img src="./images/ellipse.png" alt="">
+          <img src="./images/ellipse.png" alt="">
+          <img src="./images/ellipse.png" alt="">
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
