--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+    <link rel="icon" href="./images/museum-svgrepo-com.svg">
     <link
-    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;700&family=Roboto&display=swap"
-    rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;700&family=Roboto&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header" >
+    <header class="header">
       <div class="header__title-block">
         <a href="#menu" class="header__menu header__menu--tablet">
           <img src="images/Vector.png" alt="menu">
@@ -21,16 +22,19 @@
           МУЗЕЙ
         </h1>
 
-        <div class="input" >
-          <a href="#" class="input__ticket">
+        <div class="input">
+          <a href="#events" class="input__ticket">
             КВИТКИ
           </a>
           <a href="#" class="input__arrow">
-            <img src="images/green-block.png" class="input__img" alt="img">
+            <img
+              src="images/green-block.png"
+              class="input__img"
+              alt="img">
           </a>
         </div>
         <p class="header__supplement">
-           події
+          події
         </p>
       </div>
 
@@ -46,8 +50,12 @@
           href="https://goo.gl/maps/Q3KLWrF6TX255TT39"
           class="logo"
           target="_blank"
+        >
+          <img
+            src="images/NA MU.png"
+            class="logo__img"
+            alt="logo"
           >
-          <img src="images/NA MU.png" class="logo__img" alt="logo">
         </a>
       </div>
     </header>
@@ -61,26 +69,28 @@
               <img
                 src="images/cross.svg"
                 alt="cross"
-                class="menu__cross-icon">
+                class="menu__cross-icon"
+              >
             </a>
             <a
               href="https://goo.gl/maps/Q3KLWrF6TX255TT39"
               class="logo logo--menu"
               target="_blank"
-              >
+            >
               <img
                 src="images/NA MU.png"
                 class="logo__img logo__img--white"
-                alt="logo">
+                alt="logo"
+              >
             </a>
 
           </div>
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Актуальні події</a>
+              <a href="#events" class="menu__link">Актуальні події</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Галерея</a>
+              <a href="#galery" class="menu__link">Галерея</a>
             </li>
             <li class="menu__item">
               <a href="#" class="menu__link">Підписка</a>
@@ -90,87 +100,214 @@
             </li>
           </ul>
 
-          <a
-            href="tel:+38 (044) 278-13-57"
+          <a href="tel:+38 (044) 278-13-57"
             class="menu__call menu__call--phone"
           >
-              Зателефонуйте нам
-            </a>
-          <a
-            href="tel:+38 (044) 278-13-57"
+            Зателефонуйте нам
+          </a>
+          <a href="tel:+38 (044) 278-13-57"
             class="menu__call menu__call--action"
           >
             +38 (044) 278-13-57
           </a>
-
         </div>
       </div>
     </nav>
 
     <main>
-      <section class="page__section">
+      <section class="page__section" id="events">
         <div class="container">
           <h2 class="page__section-title">
             Актуальні події
           </h2>
-          <div class="galery">
-            <div class="galery__photo">
+          <div class="events">
+            <div class="events__photo">
               <img
                 src="images/Rectangle 2.1.png"
                 alt="photo"
-                class="galery__photo-img"
-              >
+                class="events__photo-img">
             </div>
-            <div class="galery__description">
-              <p class="galery__exhibition-date">
-                <span class="galery__text">виставка</span>
-                <span class="galery__date">26.08-29.11.2019</span>
+            <div class="events__description">
+              <p class="events__exhibition-date">
+                <span class="events__text">виставка</span>
+                <span class="events__date">26.08-29.11.2019</span>
               </p>
 
-              <h3 class="galery__exhibition-name">
+              <h3 class="events__exhibition-name">
                 Йду і повертаюсь
               </h3>
 
-              <p class="galery__description-text">
-                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              <p class="events__description-text">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
               </p>
             </div>
           </div>
 
-          <div class="galery">
-            <div class="galery__photo">
+          <div class="events">
+            <div class="events__photo">
               <img
                 src="images/Rectangle 4.1.png"
                 alt="photo"
-                class="galery__photo-img"
+                class="events__photo-img"
               >
             </div>
-            <div class="galery__description">
-              <p class="galery__exhibition-date">
-                <span class="galery__text">виставка</span>
-                <span class="galery__date">26.08-29.11.2019</span>
+            <div class="events__description">
+              <p class="events__exhibition-date">
+                <span class="events__text">виставка</span>
+                <span class="events__date">26.08-29.11.2019</span>
               </p>
 
-              <h3 class="galery__exhibition-name galery__exhibition-name--2">
+              <h3 class="events__exhibition-name events__exhibition-name--2">
                 І спогади і мрії
               </h3>
 
-              <p class="galery__description-text">
-                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              <p class="events__description-text">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
             </div>
           </div>
+        </div>
 
+        <div class="events events--big">
+          <div class="events__big-photo">
+            <img
+              src="images/Rectangle 20.png"
+              alt="photo"
+              class="events__photo-img events__photo-img--big"
+            >
+          </div>
+          <div class="events__description events__description--big">
+            <p class="events__lecture-date">
+              <span class="events__text">лекція</span>
+              <span class="events__date">26/08/2019 - 11:00</span>
+            </p>
+
+            <h3 class="events__lecture-name">
+              Від класицизму до романтизму
+            </h3>
+          </div>
         </div>
       </section>
 
-      <section class="page__section">
+      <section class="page__section" id="galery">
         <div class="container">
           <h2 class="page__section-title">Галерея</h2>
 
+          <!-- slider start-->
+          <div class="slider">
+            <div class="slider__sliders">
+
+              <input
+                type="radio"
+                name="radio-btn"
+                id="radio1"
+                class="slider__radio-btn"
+              >
+              <input
+                type="radio"
+                name="radio-btn"
+                id="radio2"
+                class="slider__radio-btn"
+              >
+              <input
+                type="radio"
+                name="radio-btn"
+                id="radio3"
+                class="slider__radio-btn"
+              >
+              <input
+                type="radio"
+                name="radio-btn"
+                id="radio4"
+                class="slider__radio-btn"
+              >
+
+              <div class="slider__slide first">
+                <img
+                  src="images/Rectangle 13.5.png"
+                  alt="photo"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="slider__slide second">
+                <img
+                  src="images/Rectangle 24.1.png"
+                  alt="photo"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="slider__slide three">
+                <img
+                  src="images/Rectangle 3.1.png"
+                  alt="photo"
+                  class="slider__img slider__img--3"
+                >
+              </div>
+
+              <div class="slider__slide four">
+                <img
+                  src="images/Rectangle 13.4.png"
+                  alt="photo"
+                  class="slider__img"
+                >
+              </div>
+            </div>
+
+            <div class="slider__navigation-manual">
+              <label for="radio1" class="slider__manual-btn"></label>
+              <label for="radio2" class="slider__manual-btn"></label>
+              <label for="radio3" class="slider__manual-btn"></label>
+              <label for="radio4" class="slider__manual-btn"></label>
+            </div>
+          </div>
+
+          <!-- galery -->
+          <div class="galery">
+            <div class="galery__pictures">
+
+              <div class="galery__first-picture">
+                <img
+                  src="images/Rectangle 13.5.png"
+                  alt="photo"
+                  class="galery__img"
+                >
+              </div>
+
+              <div class="galery__second-picture">
+                <img
+                  src="images/Rectangle 3.1.png"
+                  alt="photo"
+                  class="galery__img"
+                >
+              </div>
+
+            </div>
+            <div class="galery__pictures">
+              <div class="galery__three-picture">
+                <img
+                  src="images/Rectangle 13.3.png"
+                  alt="photo"
+                  class="galery__img"
+                >
+              </div>
+
+              <div class="galery__four-picture">
+                <img
+                  src="images/Rectangle 13.4.png"
+                  alt="photo"
+                  class="galery__img"
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-
     </main>
 
     <footer></footer>
