--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,17 @@
     <title>ХУДОЖНІЙ МУЗЕЙ</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?    family=Montserrat:wght@400;700&display=swap"     rel="stylesheet">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex    +Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
+    <header class="page__header header">
       <div class="container">
         <section class="header__top">
           <a href="#menu" class="header__icon"></a>
@@ -60,6 +63,72 @@
         </ul>
       </div>
     </nav>
+    <main class="main">
+      <div class="container">
+        <h2 class="main__title">Актуальні події</h2>
+        <section class="main__current-events current-events">
+          <div class="current-events__foto">
+            <img
+              class="current-events__foto-item"
+              src="../src/images/Rectangle 2.1.jpg"
+              alt="йду та повертаюсь"
+            >
+          </div>
+          <div class="current-events__content">
+            <div class="current-events__exhibition">
+              <a
+                href="."
+                class="current-events__exhibition-link"
+                target="_blank"
+              >
+                ВИСТАВКА
+              </a>
+              <span class="current-events__exhibition-date">
+                26.08-29.11.2019
+              </span>
+            </div>
+            <h2 class="current-events__title">
+              Йду i повертаюсь
+            </h2>
+            <p class="current-events__describe">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+
+        </section>
+        <section class="main__current-events current-events">
+          <div class="current-events__foto">
+            <img
+              class="current-events__foto-item"
+              src="../src/images/Rectangle 4.1.jpg"
+              alt="йду та повертаюсь"
+            >
+          </div>
+          <div class="current-events__content">
+            <div class="current-events__exhibition">
+              <a
+                href="."
+                class="current-events__exhibition-link"
+                target="_blank"
+              >
+                ВИСТАВКА
+              </a>
+              <span class="current-events__exhibition-date">
+                26.08-29.11.2019
+              </span>
+            </div>
+            <h2 class="current-events__title">
+              I спогади i мрії
+            </h2>
+            <p class="current-events__describe">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+            </p>
+          </div>
+
+        </section>
+
+      </div>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
