--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <div class="header page__header">
+    <script type="text/javascript" src="scripts/main.js"></script>
+    <div class="header page__header page__section">
       <div class="container">
         <div class="header__content">
           <div class="header__top">
@@ -37,7 +38,86 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <main class="page__main">
 
-    <script type="text/javascript" src="scripts/main.js"></script>
+        <section class="page__section events">
+          <h2 class="page__section-title">
+            Актуальні події
+          </h2>
+          <div class="events__event events__event--first">
+            <img
+              src="./images/pictures/gradobank.png"
+              alt="Йду та повертаюсь" class="events__picture"
+            >
+
+            <div class="events__about">
+              <div class="events__date-wrapper">
+                <p class="events__type">ВИСТАВКА</p>
+                <p class="events__date">26.08-29.11.2019</p>
+              </div>
+
+
+              <p class="events__subtitle">
+                Йду і повертаюсь
+              </p>
+              <p class="events__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events__event events__event--second">
+            <img
+              src="./images/pictures/yablonska.png"
+              alt="І спогади і мрії" class="events__picture"
+            >
+
+            <div class="events__about">
+              <div class="events__date-wrapper">
+                <p class="events__type">ВИСТАВКА</p>
+                <p class="events__date">26.08-29.11.2019</p>
+              </div>
+
+
+              <p class="events__subtitle">
+                І спогади і мрії
+              </p>
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+
+        </section>
+
+        <section class="
+        page__section page__section--lecture lecture">
+          <div class="lecture__background"></div>
+          <div class="lecture__about">
+            <div class="lecture__date-wrapper">
+              <p class="lecture__type">
+                ЛЕКЦІЯ
+              </p>
+              <p class="lecture__date">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+
+            <h2 class="lecture__subtitle">
+              Від класицизму до романтизму
+            </h2>
+          </div>
+
+        </section>
+
+        <section class="page__section gallery">
+          <h2 class="page__section-title">
+            Галерея
+          </h2>
+        </section>
+      </main>
+    </div>
+
   </body>
 </html>
